--- a/index.Rmd
+++ b/index.Rmd
@@ -49,19 +49,9 @@ knitr::opts_chunk$set(echo = FALSE)
 
 <!-- Chromosome conformation capture experiments coupled with high-throughput sequencing (Hi-C) allow to measure DNA-DNA contacts genome-wide and reviled a highly organized hierarchy of three-dimensional genome organization. -->
 
-The human genome is folded non-randomly in the nucleus. 
-Proximity ligation methods probe the three-dimensional genome architecture and produce genome-wide maps of pairwise chromatin contacts. 
-Enrichment of these contacts in discrete regions of several hundred kilo-bases reveals local folding of chromosomes into so-called topologically associating domains (TADs). 
-TADs restrict contacts of distal regulatory sequences, such as enhancers, with their target genes and might, therefore, represent important functional units of genomes.
-
-This thesis describes the computational integration of genome-wide chromatin interaction maps with diverse genomic datasets to analyze the function of TADs for gene regulation during evolution and in diseases. 
-More specifically, pairs of functionally related genes, such as paralogs, are enriched for colocalization in the same TAD, share more often common enhancers than expected by chance, and have increased long-range contact frequencies. 
-The clustering of related genes within TADs enables concerted gene expression and indicates evolutionary constraints in functional genome organization. 
-Indeed, comparative genomic analysis of evolutionary rearrangements between human and diverse mammal species shows that TADs are highly conserved building blocks of genomes across millions of years of evolution. 
-While TADs, in general, conserve expression profiles between mouse and human orthologs, genes in rearranged TADs show divergent expression profiles. 
-Furthermore, a computational pipeline predicts disruption of TADs in whole-genome sequenced subjects with diverse neurodevelopmental phenotypes. 
-While altered protein-coding sequences cannot explain the phenotypes, balanced chromosomal rearrangements disrupt TADs and promoter-enhancer interactions of phenotypically matching genes leading to miss-regulation in patient-derived cell lines.
-Finally, a computational tool, 7C, is presented to predict chromatin looping interactions by broadly available ChIP-seq data. 
-This tool enables to study genome folding in many diverse tissues and conditions.
-
+Proximity ligation methods probe the three-dimensional genome architecture and produce genome-wide maps of pairwise chromatin contact frequencies. Enrichment of these contacts in discrete intervals reveals local folding of chromosomes into so-called topologically associating domains (TADs). TADs restrict interactions between distal regulatory sequences, such as enhancers, with their target genes and might represent essential functional units of genome regulation.  
+This thesis describes the computational integration of genome-wide contact maps with diverse genomic datasets to relate TADs to gene regulation during evolution and in diseases. 
+More specifically, pairs of functionally related genes, such as paralogs, are enriched to be regulated with shared enhancers in the same TAD and have increased long-range contacts.  This clustering of related genes in TADs enables concerted gene expression and indicates evolutionary constraints in functional genome organization.
+Analysis of genomic rearrangements between human and diverse mammal species shows that TADs are conserved building blocks of genomes during evolution. While this conservation of TADs is associated with conserved gene expression, genes in rearranged TADs have divergent expression profiles. Consistently, we find disruption of TADs in whole-genome sequenced subjects with diverse neurodevelopmental phenotypes. While altered protein-coding sequences cannot explain these phenotypes, balanced chromosomal rearrangements disrupt TADs and promoter-enhancer interactions of phenotypically matching genes, leading to miss-expression in patient-derived cell lines.
+Finally, a computational tool, 7C, is presented to predict chromatin looping interactions by broadly available ChIP-seq data. 7C enables to study genome folding in many diverse tissues and conditions.  
 Together, these results show that TAD disruptions cause altered gene regulation during evolution and in diseases. TADs are not only structural units of genomes but also crucial functional building blocks and represent regulatory environments for genes. Therefore, it will be increasingly important to take genome structure into account, not only in genomic research but also in clinical practice.
